--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "rxjs-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "sample.js",
-  "dependencies": {
+   "dependencies": {
     "parcel-bundler": "^1.12.3",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html --global mymod"
   },
   "keywords": [],
-  "author": "Brian Troncone",
   "license": "MIT"
 }
